[!] fix word wrap at description in product description

--- a/public/css/merchants/style.css
+++ b/public/css/merchants/style.css
@@ -2266,6 +2266,7 @@ textarea.form-item__area::placeholder {color: #999;}
     font-size: 18px;
     font-weight: 300;
     line-height: 1.5;
+    word-break: break-all;
 }
 
 .edit-attr__head {
